@@ -14,9 +14,10 @@ pyroscope (0.3.7) hardy; urgency=low
   * Added common --cron option that activates logging into the file
     ./log/cron.log in the configuration directory
   * Moved default output formats to [FORMATS] section of "config.ini"
+  * mktor: Added --cross-seed option
   * chtor: added --output-directory option
 
- -- pyroscope <pyroscope.project@gmail.com>  Thu, 02 Sep 2010 18:52:52 +0200
+ -- pyroscope <pyroscope.project@gmail.com>  Sat, 04 Sep 2010 15:24:12 +0200
 
 pyroscope (0.3.6) hardy; urgency=low
 
